src/App.css
/* ... */
.light-section {
	background: var(--light);
}

.studio .light-section ::selection {
	background: var(--green);
	color: var(--dark);
}

.about .light-section ::selection {
	background: var(--blue);
	color: var(--light);
}

.contact .light-section ::selection {
	background: var(--yellow);
	color: var(--dark);
}

.craft-panel {
	background: var(--light);
	padding: 64px 16px;
}

.craft-panel .inner {
	display: flex;
	flex-direction: column;
	gap: 32px;
}

.craft-panel .inner .craft-grid {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 32px;
}

.craft-panel .inner .craft-item {
	display: flex;
	flex-direction: column;
	gap: 32px;
}

.craft-panel .inner .craft-item img {
	width: 100%;
	object-fit: cover;
	border-radius: var(--img-border-radius);
	border: 1px solid var(--dark-10);
}

footer {
	padding: 64px 16px;
	background: var(--dark);
}

footer .inner {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	gap: 32px;
}

footer .inner .col {
	grid-column: span 1;
	display: flex;
	flex-direction: column;
	gap: 8px;
}

footer .inner .double {
	gap: 24px;
}

footer .inner .double .mini-col {
	display: flex;
	flex-direction: column;
	gap: 8px;
}

footer .inner .button-row {
  grid-column: span 3;
  justify-content: flex-end;
}

footer a, footer p {
	font-size: 16px;
	line-height: 130%;
	transition: var(--default-transition);
}

footer a, footer p.light {
	color: var(--light);
}

footer a:not(a.button):focus-visible {
	outline-offset: 6px;
	border-radius: 1px;
	height: 20.8px;
}

footer a:focus-visible {
	outline-color: var(--light) !important;
}

footer p {
	color: var(--light-50);
}

footer ul {
	display: flex;
	flex-direction: column;
	gap: 8px;
}

footer ul li {
	list-style: none;
}

footer .row {
	display: flex;
	align-items: center;
	gap: 8px;
}

button {
	font-family: 'Helvetica Neue Roman', sans-serif;
}

.contact .light-section {
	padding: 64px 16px;
}

.contact .light-section .inner {
	display: flex;
	flex-direction: column;
	gap: 96px;
}

.contact .inner .text-wrapper {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	gap: 32px;
}

.contact .inner .text {
	display: flex;
	flex-direction: column;
	gap: 32px;
	grid-column: span 3;
}

.contact .inner .text p {
	font-size: 24px;
	line-height: 130%;
}

.contact-cards {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	gap: 48px 32px;
}

.contact-card {
	padding: 24px;
	background: var(--dark-5);
	border-radius: 4px;
	position: relative;
	height: 128px;
	display: flex;
	align-items: flex-end;
	grid-column: span 3;
	transition: var(--default-transition);
}

.contact-card:hover {
	background: var(--dark-10);
}

.contact-card:hover svg {
	transform: translate(4px, -4px);
}

.contact-card:hover svg path {
	stroke: var(--dark);
}

.contact-card .top-line {
	width: 100%;
	position: absolute;
	top: 0;
	left: 0;
	height: 3px;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}

.contact-card h3 {
	font-size: 24px;
	color: var(--dark);
}

.contact-card svg {
	position: absolute;
	top: 24px;
	right: 24px;
	transition: var(--default-transition);
	width: 32px;
	height: 32px;
}

.contact-card svg path {
	stroke: var(--gray);
}

.contact-card img {
	width: 64px;
	height: 64px;
	position: absolute;
	left: 24px;
	top: -32px;
	border-radius: var(--img-border-radius);
	transition: var(--default-transition);
}

.contact-card .resume-img {
	border-radius: 1px;
	box-shadow: 0 1px 2px rgba(0 0 0 / 32%);
}

.contact-card:hover img {
	transform: rotate(4deg) scale(1.06) translate(4px, -4px);
	box-shadow: 0 2px 4px rgba(0 0 0 / 32%);
}

.contact-card a:focus-visible {
	outline: none;
}

.contact-card a::after {
	position: absolute;
	inset: 0;
	content: '';
	width: 100%;
	height: 100%;
	border-radius: 4px;
	transition: var(--default-transition);
}

.contact-card a:focus-visible::after {
	outline: 3px dotted var(--dark);
	outline-offset: 2px;
}

.contact-card:hover svg path {
  stroke: var(--card-accent-color);
}

.contact .letter-wrapper {
	display: flex;
	justify-content: center;
	position: relative;
	bottom: -200px;
	padding-top: 100px;
}

.contact .letter-wrapper:hover .paper, .contact:has(.copy:focus-visible) .paper {
  transform: translateX(-50%) translate(8px, -24px) rotate(4deg) scale(1.03);
  box-shadow: 0 -8px 16px rgba(0 0 0 / 8%);
}

.contact .letter-wrapper:hover .paper .copy, .contact .copy:focus-visible {
	opacity: 0.7 !important;
	transform: scale(1) !important;
}

.contact .letter-fg {
	position: absolute;
	bottom: -12px;
	left: 50%;
	transform: translateX(-50%);
	z-index: 2;
	pointer-events: none;
}

.contact .paper {
	position: absolute;
	bottom: 20px;
	left: 50%;
	transform: translateX(-50%);
	background: var(--light);
	border-radius: 4px;
	z-index: 1;
	box-shadow: 0 -4px 8px rgba(0 0 0 / 8%);
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 8px;
	padding: 48px 32px;
	width: 300px;
	height: 300px;
	/* transition: var(--default-transition); */
	transition: transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.5), top 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.5), box-shadow var(--default-transition);
	border: 1px solid var(--dark-15);
}

.contact .paper .top {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 8px;
}

.contact .paper h2 {
	font-size: 24px;
}

.contact .paper .top a {
	width: 200px;
	height: 42px;
}

.contact .paper > * {
	z-index: 3;
}

.contact .paper .copy {
	opacity: 0;
	transition: var(--default-transition);
	transform: scale(0.8);
	color: var(--dark-50);
	font-size: 16px;
	background: none;
	border: none;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 4px;
	cursor: pointer;
	padding: 12px;
	width: 200px;
	height: 42px;
}

.contact .paper .copy:hover {
	opacity: 1 !important;
}

.contact .paper .copy svg {
	width: 18px;
	height: 18px;
	position: relative;
	top: -2px;
}

.contact .paper .copy svg path {
	transition: var(--default-transition);
}

.contact .paper .copy:hover svg .first {
	transform: translate(-0.75px, -0.75px);
}
/* ... */

